Fix off-canvas screen causing horizontal scrolling

--- a/src/scss/components/_drawer.scss
+++ b/src/scss/components/_drawer.scss
@@ -1,5 +1,5 @@
 .drawer {
-    position: absolute;
+    position: fixed;
     top: $lineheight * 3;
     right: 0;
     -webkit-transform: translateX(103%);
